--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "nyc": "^11.0.2",
     "react-test-renderer": "^16.0.0",
     "sinon": "^7.1.0",
-    "styled-components": "^4.1.3",
+    "styled-components": "5.0.0",
     "webpack": "^4.29.6",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.1.2",
@@ -94,7 +94,7 @@
     "react-dom": "^16.4.1"
   },
   "peerDependencies": {
-    "styled-components": "^4.0.0",
+    "styled-components": "5.0.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
   }
